--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Lefti90/FullStackOpen-IS/issues"
-  },
+  },  
   "homepage": "https://github.com/Lefti90/FullStackOpen-IS#readme",
   "dependencies": {
     "cors": "^2.8.5",
@@ -24,5 +24,11 @@
     "express": "^4.18.2",
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
